--- a/FaceAR/Info.plist
+++ b/FaceAR/Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Audiovisual Recording</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Export AR Media</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Export AR Media</string>
 	<key>NSCameraUsageDescription</key>
 	<string>$(EXECUTABLE_NAME) needs access to camera</string>
 	<key>UIApplicationSceneManifest</key>
