--- a/FaceAR/Resources/Info.plist
+++ b/FaceAR/Resources/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>$(EXECUTABLE_NAME) needs access to microphone</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Export AR Media</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
